Bug 196038 - Kontact crashed after deleting an Akonadi ressource
Summary: Kontact crashed after deleting an Akonadi ressource
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: KResource compat bridges (other bugs)
Version First Reported In: 1.1.90
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kevin Krammer
URL:
Keywords:
: 196238 200209 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-06-11 15:35 UTC by Florian
Modified: 2009-07-17 10:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian 2009-06-11 15:35:45 UTC
Application that crashed: kontact
Version of the application: 4.3.0 pre
KDE Version: 4.2.90 (KDE 4.2.90 (KDE 4.3 Beta2))
Qt Version: 4.5.1
Operating System: Linux 2.6.28-12-generic x86_64
Distribution: Ubuntu 9.04

 -- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[KCrash Handler]
#5  0x00007f2479df1414 in KRES::Resource::identifier (this=0x18e5f00) at /usr/include/qt4/QtCore/qstring.h:711
#6  0x00007f2479df737f in KRES::ManagerImpl::writeResourceConfig (this=0x3493f20, resource=0x18e5f00, checkActive=true) at /build/buildd/kdepimlibs-4.2.90/kresources/managerimpl.cpp:385
#7  0x00007f2479df79f8 in KRES::ManagerImpl::change (this=0x7fff843830d0, resource=0x18e5f00) at /build/buildd/kdepimlibs-4.2.90/kresources/managerimpl.cpp:215
#8  0x00007f2455e797ed in ResourceSelection::edit (this=0x3e39990) at /usr/include/kresources/manager.h:304
#9  0x00007f2455e7b0e8 in ResourceSelection::qt_metacall (this=0x3e39990, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff84383360)
    at /build/buildd/kdepim-4.2.90/obj-x86_64-linux-gnu/kaddressbook/features/resourceselection.moc:82
#10 0x00007f24768bd8d2 in QMetaObject::activate (sender=0x3e2fb00, from_signal_index=<value optimized out>, to_signal_index=30, argv=0x64df000) at kernel/qobject.cpp:3120
#11 0x00007f2477a6fac7 in QAbstractButton::clicked (this=0x7fff843830d0, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:200
#12 0x00007f24777cad7b in QAbstractButtonPrivate::emitClicked (this=0x3e78ce0) at widgets/qabstractbutton.cpp:543
#13 0x00007f24777cc9d2 in QAbstractButtonPrivate::click (this=0x3e78ce0) at widgets/qabstractbutton.cpp:536
#14 0x00007f24777ccc25 in QAbstractButton::mouseReleaseEvent (this=0x3e2fb00, e=0x7fff84383b40) at widgets/qabstractbutton.cpp:1115
#15 0x00007f247789e96a in QToolButton::mouseReleaseEvent (this=0x7fff843830d0, e=0x18e5f00) at widgets/qtoolbutton.cpp:709
#16 0x00007f2477475def in QWidget::event (this=0x3e2fb00, event=0x7fff84383b40) at kernel/qwidget.cpp:7521
#17 0x00007f2477424b9d in QApplicationPrivate::notify_helper (this=0x190e190, receiver=0x3e2fb00, e=0x7fff84383b40) at kernel/qapplication.cpp:4057
#18 0x00007f247742d54a in QApplication::notify (this=<value optimized out>, receiver=0x3e2fb00, e=0x7fff84383b40) at kernel/qapplication.cpp:3759
#19 0x00007f247885406b in KApplication::notify (this=0x7fff84385a90, receiver=0x3e2fb00, event=0x7fff84383b40) at /build/buildd/kde4libs-4.2.90/kdeui/kernel/kapplication.cpp:302
#20 0x00007f24768a7dfc in QCoreApplication::notifyInternal (this=0x7fff84385a90, receiver=0x3e2fb00, event=0x7fff84383b40) at kernel/qcoreapplication.cpp:610
#21 0x00007f247742c798 in QApplicationPrivate::sendMouseEvent (receiver=0x3e2fb00, event=0x7fff84383b40, alienWidget=0x3e2fb00, nativeWidget=0x18f6980, buttonDown=<value optimized out>, 
    lastMouseReceiver=@0x7f2477e86010) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#22 0x00007f2477496789 in QETWidget::translateMouseEvent (this=0x18f6980, event=<value optimized out>) at kernel/qapplication_x11.cpp:4448
#23 0x00007f24774957f5 in QApplication::x11ProcessEvent (this=0x7fff84385a90, event=0x7fff843856c0) at kernel/qapplication_x11.cpp:3566
#24 0x00007f24774bdf84 in x11EventSourceDispatch (s=0x1907cd0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#25 0x00007f246fffb20a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#26 0x00007f246fffe8e0 in ?? () from /usr/lib/libglib-2.0.so.0
#27 0x00007f246fffea7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#28 0x00007f24768d152f in QEventDispatcherGlib::processEvents (this=0x18c7ea0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:324
#29 0x00007f24774bd70f in QGuiEventDispatcherGlib::processEvents (this=0x7fff843830d0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#30 0x00007f24768a66a2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -2076681808}) at kernel/qeventloop.cpp:149
#31 0x00007f24768a6a6d in QEventLoop::exec (this=0x7fff843859f0, flags={i = -2076681728}) at kernel/qeventloop.cpp:200
#32 0x00007f24768a8d34 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#33 0x0000000000404945 in main (argc=1, argv=0x7fff84386178) at /build/buildd/kdepim-4.2.90/kontact/src/main.cpp:218

Reported using DrKonqi
Comment 1 Christophe Marin 2009-06-12 20:51:03 UTC
*** Bug 196238 has been marked as a duplicate of this bug. ***
Comment 2 Dario Andres 2009-07-14 19:55:43 UTC
*** Bug 200209 has been marked as a duplicate of this bug. ***
Comment 3 Kevin Krammer 2009-07-15 22:06:45 UTC
I tried to reproduce it but couldn't, which most likely means that I did not do the exact same thing.

Maybe one of you can help me to better understand the circumstances.

You have the Akonadi resource in KAddressBook and it has at least two sub folders, correct?
And then you remove one and then it crashed?

Did you do the remove from within KAddressBook ("Manager Address Book Sources") or from System Settings?
Comment 4 Craig Magina 2009-07-15 22:16:18 UTC
I did the removal by going through kontact->contacts->Resource Configuration->Manage Address Book Sources
Comment 5 Kevin Krammer 2009-07-16 10:51:30 UTC
Thanks.

I will try to do it within Kontact as well, maybe it is just not triggered in stand-alone KAddressBook.

Do you have any other resource for contacts other than the Akonadi one and if yes was it enabled at the time?
Did you add the Akonadi contacts resource to Kontact during this invocation or was it already loaded when you started it?
Comment 6 Craig Magina 2009-07-16 16:17:46 UTC
I have the Default Address Book resource as well, which was there to begin with.  No, I did not add any more resources.
Comment 7 Kevin Krammer 2009-07-16 19:58:52 UTC
I can reproduce it now, not always though.
It could actually be a bug in KAddressBook, I'll investigate
Comment 8 Kevin Krammer 2009-07-17 10:05:02 UTC
SVN commit 998203 by krake:

Resource view items might be added/removed during resource configuration, so the item pointer might become invalid.
Keep the resource pointer instead, the item itself isn't used anyway.

With this change I can no longer reproduce bug #196038, but maybe it just made it harder to trigger.

BUG: 196038


 M  +9 -4      resourceselection.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=998203
Comment 9 Kevin Krammer 2009-07-17 10:06:34 UTC
SVN commit 998205 by krake:

Backport of revision 998203

Resource view items might be added/removed during resource configuration, so the item pointer might become invalid.
Keep the resource pointer instead, the item itself isn't used anyway.

With this change I can no longer reproduce bug #196038, but maybe it just made it harder to trigger.

CCBUG: 196038



 M  +9 -4      resourceselection.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=998205