Resource view items might be added/removed during resource configuration, so the item pointer might become invalid. Keep the resource pointer instead, the item itself isn't used anyway.

With this change I can no longer reproduce bug #196038, but maybe it just made it harder to trigger.

BUG: 196038

svn path=/trunk/KDE/kdepim/; revision=998203